--- a/HTML/HTMLDocs/DataAccess/DALTest.html
+++ b/HTML/HTMLDocs/DataAccess/DALTest.html
@@ -9,6 +9,8 @@
   <link rel='stylesheet' type='text/css' href='../CSS/Syntax.css' />
 </head>
 <body>
+  <a href="DAL.html">The Data Access Layer</a>
+  <br />
   <h2 class="mediumVMargin">The Test DAL Program</h2>
   <!-- ******************************* -->
   <div class="columnsAuto">
@@ -199,6 +201,6 @@
   }
   <span class='keyWord'>return</span> retValue;
 }</pre>
-  <a href="DALTestLoad.html">The DALTest Load() method.</a>
+  <a href="DALTestLoad.html">The DAL Test Load() Method</a>
 </body>
 </html>
