--- a/HTML/HTMLDocs/DataAccess/DALTestAdd.html
+++ b/HTML/HTMLDocs/DataAccess/DALTestAdd.html
@@ -9,6 +9,8 @@
   <link rel='stylesheet' type='text/css' href='../CSS/Syntax.css' />
 </head>
 <body>
+  <a href="DALTestLoad.html">The DAL Test Load() Method</a>
+  <br />
   <h3 class="mediumVMargin">The Add() Method</h3>
   <!-- ******************************* -->
   <div class="columns">
@@ -131,6 +133,6 @@ where Name = ‘Added’ and PrincipleFlag = ‘0’.</pre>
     </p>
   </div>
   <br />
-  <a href="DALTestRetrieve.html">The DALTest Retrieve() method.</a>
+  <a href="DALTestRetrieve.html">The DAL Test Retrieve() Method</a>
 </body>
 </html>
