--- a/HTML/HTMLDocs/DataAccess/DALTestLoad.html
+++ b/HTML/HTMLDocs/DataAccess/DALTestLoad.html
@@ -9,6 +9,8 @@
   <link rel='stylesheet' type='text/css' href='../CSS/Syntax.css' />
 </head>
 <body>
+  <a href="DALTest.html">The DAL Test Program</a>
+  <br/>
   <h3 class="mediumVMargin">The Load() Method</h3>
   <!-- ******************************* -->
   <div class="columns">
@@ -65,6 +67,6 @@
   Console.WriteLine("Press any key to <span class='keyWord'>continue</span> . . .");
   Console.ReadKey();
 }</pre>
-  <a href="DALTestAdd.html">The DALTest Add() method."</a>
+  <a href="DALTestAdd.html">The DAL Test Add() Method"</a>
 </body>
 </html>
