--- a/HTML/HTMLDocs/DataAccess/DALTestRetrieve.html
+++ b/HTML/HTMLDocs/DataAccess/DALTestRetrieve.html
@@ -9,6 +9,8 @@
   <link rel='stylesheet' type='text/css' href='../CSS/Syntax.css' />
 </head>
 <body>
+  <a href="DALTestAdd.html">The DAL Test Add() Method</a>
+  <br />
   <h4 class="mediumVMargin">The Retrieve() Method</h4>
   <!-- ******************************* -->
   <div class="columnsAuto">
@@ -51,6 +53,6 @@
     </ul>
   </div>
   <br />
-  <a href="DALTestUpdate.html"">DALTestUpdate() method.</a>
+  <a href="DALTestUpdate.html"">The DAL Test Update() Method</a>
 </body>
 </html>
