--- a/HTML/HTMLDocs/DataAccess/DALTestUpdate.html
+++ b/HTML/HTMLDocs/DataAccess/DALTestUpdate.html
@@ -9,6 +9,8 @@
   <link rel='stylesheet' type='text/css' href='../CSS/Syntax.css' />
 </head>
 <body>
+  <a href="DALTestRetrieve.html">The DAL Test Retrieve() Method</a>
+  <br />
   <h4 class="mediumVMargin">The Update() Method</h4>
   <!-- ******************************* -->
   <div class="columnsAuto">
