--- a/HTML/HTMLDocs/DataAccess/DALTest.html
+++ b/HTML/HTMLDocs/DataAccess/DALTest.html
@@ -20,7 +20,7 @@
     </p>
     <ul class="smallVMargin">
       <li>
-        Add a new Console Project named “DataTestDAL” to the DataTest solution.
+        Add a new Console Project named &quot;DataTestDAL&quot; to the DataTest solution.
       </li>
     </ul>
   </div>
@@ -182,8 +182,8 @@
     </p>
     <ul class="smallVMargin">
       <li>
-        Add the WriteRowString() function to the Program class, “Helper
-        Functions” region.
+        Add the WriteRowString() function to the Program class, &quot;Helper
+        Functions&quot; region.
       </li>
     </ul>
   </div>
