--- a/HTML/HTMLDocs/DataAccess/DALTestAdd.html
+++ b/HTML/HTMLDocs/DataAccess/DALTestAdd.html
@@ -26,11 +26,11 @@
     </p>
     <ul class="smallVMargin">
       <li>
-        Add the “GetKey Methods” region to the PersonManager class.
+        Add the &quot;GetKey Methods&quot; region to the PersonManager class.
       </li>
       <li>
-        Add the SetExcludeKeys() method to the PersonManager class, “GetKey
-        Methods” region.
+        Add the SetExcludeKeys() method to the PersonManager class, &quot;GetKey
+        Methods&quot; region.
       </li>
     </ul>
   </div>
@@ -52,7 +52,7 @@ public void SetExcludeKeys()
   <div class="columnsAuto">
     <ul class="smallVMargin">
       <li>
-        Add the TestAdd() function to the Program class, “TestFunctions” region.
+        Add the TestAdd() function to the Program class, &quot;TestFunctions&quot; region.
       </li>
     </ul>
   </div>
@@ -93,7 +93,7 @@ private static void TestAdd(PersonManager personManager)
   <div class="columns">
     <ul class="smallVMargin">
       <li>
-        Add the TestAdd(personManager) function call to the Program class, “Test function calls.” section.
+        Add the TestAdd(personManager) function call to the Program class, &quot;Test function calls.&quot; section.
       </li>
     </ul>
   </div>
