--- a/HTML/HTMLDocs/DataAccess/DALTestLoad.html
+++ b/HTML/HTMLDocs/DataAccess/DALTestLoad.html
@@ -21,7 +21,7 @@
     </p>
     <ul class="smallVMargin">
       <li>
-        Add the “Test Functions” region to the Program class after the Main()
+        Add the &quot;Test Functions&quot; region to the Program class after the Main()
         function.
       </li>
       <li>
