--- a/HTML/HTMLDocs/DataAccess/DALTestRetrieve.html
+++ b/HTML/HTMLDocs/DataAccess/DALTestRetrieve.html
@@ -21,7 +21,7 @@
     <ul class="smallVMargin">
       <li>
         Add the TestRetrieve() function to the Program class, test function
-        “TestFunctions” region.
+        &quot;TestFunctions&quot; region.
       </li>
     </ul>
   </div>
@@ -48,7 +48,7 @@
     <ul class="smallVMargin">
       <li>
         Add the TestRetrieve(personManager) function call to the Program class,
-        “Test function calls.” section.
+        &quot;Test function calls.&quot; section.
       </li>
     </ul>
   </div>
