--- a/HTML/HTMLDocs/DataAccess/DALTestAdd.html
+++ b/HTML/HTMLDocs/DataAccess/DALTestAdd.html
@@ -119,7 +119,7 @@ private static void TestAdd(PersonManager personManager)
   <pre class="code">
 select ID, Name, PrincipleFlag
 from Person
-where Name = ‘Added’ and PrincipleFlag = ‘0’.</pre>
+where Name = &apos;Added&apos; and PrincipleFlag = &apos;0&apos;.</pre>
   <div class="columns">
     <p class="book">
       To prevent the PrincipleFlag value from being included in the SQL
