--- a/HTML/HTMLDocs/DataAccess/DALTestUpdate.html
+++ b/HTML/HTMLDocs/DataAccess/DALTestUpdate.html
@@ -20,7 +20,7 @@
     </p>
     <ul class="smallVMargin">
       <li>
-        Add the TestUpdate() function to the Program class, “TestFunctions”
+        Add the TestUpdate() function to the Program class, &quot;TestFunctions&quot;
         region.
       </li>
     </ul>
@@ -63,7 +63,7 @@
     <ul class="smallVMargin">
       <li>
         Add the TestUpdate(personManager) function call to the Program class,
-        “Test function calls.” section.
+        &quot;Test function calls.&quot; section.
       </li>
     </ul>
   </div>
