--- a/HTML/HTMLDocs/DataAccess/DALTest.html
+++ b/HTML/HTMLDocs/DataAccess/DALTest.html
@@ -20,7 +20,7 @@
     </p>
     <ul class="smallVMargin">
       <li>
-        Add a new Console Project named &quot;DataTestDAL&quot; to the DataTest solution.
+        Add a new Console Project named "DataTestDAL" to the DataTest solution.
       </li>
     </ul>
   </div>
@@ -78,13 +78,13 @@
     </p>
     <ul class="smallVMargin">
       <li>
-        DbDataAccess – This is a reference to the Message Data Access object.
+        DbDataAccess - This is a reference to the Message Data Access object.
       </li>
       <li>
-        DbService – This is a reference to the local Data Service object.
+        DbService - This is a reference to the local Data Service object.
       </li>
       <li>
-        DbServiceClient – This is a reference to the remote Data Service
+        DbServiceClient - This is a reference to the remote Data Service
         Proxy class.
       </li>
     </ul>
@@ -182,8 +182,8 @@
     </p>
     <ul class="smallVMargin">
       <li>
-        Add the WriteRowString() function to the Program class, &quot;Helper
-        Functions&quot; region.
+        Add the WriteRowString() function to the Program class, ";Helper
+        Functions"; region.
       </li>
     </ul>
   </div>
