--- a/HTML/HTMLDocs/DataAccess/DALTest.html
+++ b/HTML/HTMLDocs/DataAccess/DALTest.html
@@ -78,13 +78,13 @@
     </p>
     <ul class="smallVMargin">
       <li>
-        DbDataAccess - This is a reference to the Message Data Access object.
+        DbDataAccess &hyphen; This is a reference to the Message Data Access object.
       </li>
       <li>
-        DbService - This is a reference to the local Data Service object.
+        DbService &hyphen; This is a reference to the local Data Service object.
       </li>
       <li>
-        DbServiceClient - This is a reference to the remote Data Service
+        DbServiceClient &hyphen; This is a reference to the remote Data Service
         Proxy class.
       </li>
     </ul>
