--- a/HTML/HTMLDocs/DataAccess/DALTest.html
+++ b/HTML/HTMLDocs/DataAccess/DALTest.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <!-- Copyright (c) Lester J. Clark and Contributors. -->
 <!-- Licensed under the MIT License. -->
-<!-- DAL.html -->
+<!-- DALTest.html -->
 <html>
 <head>
-  <title>Data Access Layer</title>
+  <title>DAL Test</title>
   <link rel="stylesheet" type="text/css" href="../CSS/HTMLBooks.css" />
   <link rel='stylesheet' type='text/css' href='../CSS/Syntax.css' />
 </head>
