--- a/HTML/HTMLDocs/DataAccess/DALTestAdd.html
+++ b/HTML/HTMLDocs/DataAccess/DALTestAdd.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <!-- Copyright (c) Lester J. Clark and Contributors. -->
 <!-- Licensed under the MIT License. -->
-<!-- DAL.html -->
+<!-- DALTestAdd.html -->
 <html>
 <head>
-  <title>Data Access Layer</title>
+  <title>Data Test Add</title>
   <link rel="stylesheet" type="text/css" href="../CSS/HTMLBooks.css" />
   <link rel='stylesheet' type='text/css' href='../CSS/Syntax.css' />
 </head>
 <body>
-  <a href="DALTestLoad.html">The DAL Test Load() Method</a>
+  <a href="DALTestLoad.html">The DAL Test Add() Method</a>
   <br />
   <h3 class="mediumVMargin">The Add() Method</h3>
   <!-- ******************************* -->
