--- a/HTML/HTMLDocs/DataAccess/DALTestLoad.html
+++ b/HTML/HTMLDocs/DataAccess/DALTestLoad.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- Copyright (c) Lester J. Clark and Contributors. -->
 <!-- Licensed under the MIT License. -->
-<!-- DAL.html -->
+<!-- DALTestLoad.html -->
 <html>
 <head>
   <title>DALTest Load</title>
