--- a/HTML/HTMLDocs/DataAccess/DAL.html
+++ b/HTML/HTMLDocs/DataAccess/DAL.html
@@ -5,51 +5,53 @@
 <html>
 <head>
   <title>Data Access Layer</title>
+  <link rel="stylesheet" type="text/css" href="../CSS/CodeDoc.css" />
   <link rel="stylesheet" type="text/css" href="../CSS/HTMLBooks.css" />
   <link rel='stylesheet' type='text/css' href='../CSS/Syntax.css' />
 </head>
 <body>
-  <h2 class="mediumVMargin">The Data Access Layer</h2>
-  <!-- ******************************* -->
-  <div class="columns">
-    <p class="book">
-      A Data Access Layer (DAL) is useful for simplifying data access
-      functionality and reuse. It separates the data access code from the
-      calling programs. It also provides a strongly typed, object oriented view
-      of the data.
-    </p>
-    <p class="book">
-      A DAL library usually provides classes for a group of related database
-      tables. These are often classes for a specific application, module or
-      common application function.
-    </p>
-    <p class="book">
-      Since the DAL pattern is used extensively in the LJC Code, the following
-      examples will follow this structure. The sample code will also attempt to
-      use the common LJC structure, formatting and naming conventions.
-    </p>
-    <ul class="smallVMargin">
-      <li>
-        Create a new Solution named &quot;DataTest&quot;
-      </li>
-      <li>
-        Add a new .NET Framework Library Project named &quot;DataTestDAL&quot; to the
-        DataTest solution.
-      </li>
-      <li>
-        Add a Folder named &quot;Data&quot; to the DataTestDAL project.
-      </li>
-      <li>
-        Add a Folder named &quot;Manager&quot; to the DataTestDAL project.
-      </li>
-    </ul>
-    <p class="book">
-      The following examples use the table created with this script.
-    </p>
-  </div>
-  <pre class="code">
+  <div class="page">
+    <h2 class="headingMargin">The Data Access Layer</h2>
+    <!-- ******************************* -->
+    <div class="columns">
+      <p class="book">
+        A Data Access Layer (DAL) is useful for simplifying data access
+        functionality and reuse. It separates the data access code from the
+        calling programs. It also provides a strongly typed, object oriented view
+        of the data.
+      </p>
+      <p class="book">
+        A DAL library usually provides classes for a group of related database
+        tables. These are often classes for a specific application, module or
+        common application function.
+      </p>
+      <p class="book">
+        Since the DAL pattern is used extensively in the LJC Code, the following
+        examples will follow this structure. The sample code will also attempt to
+        use the common LJC structure, formatting and naming conventions.
+      </p>
+      <ul class="listMargin">
+        <li>
+          Create a new Solution named &quot;DataTest&quot;
+        </li>
+        <li>
+          Add a new .NET Framework Library Project named &quot;DataTestDAL&quot; to the
+          DataTest solution.
+        </li>
+        <li>
+          Add a Folder named &quot;Data&quot; to the DataTestDAL project.
+        </li>
+        <li>
+          Add a Folder named &quot;Manager&quot; to the DataTestDAL project.
+        </li>
+      </ul>
+      <p class="book">
+        The following examples use the table created with this script.
+      </p>
+    </div>
+    <pre class="code">
 IF NOT EXISTS(SELECT* FROM INFORMATION_SCHEMA.TABLES
- WHERE TABLE_NAME = N'Person')
+  WHERE TABLE_NAME = N'Person')
 BEGIN
 CREATE TABLE[dbo].[Person]
 (
@@ -62,31 +64,31 @@ CREATE TABLE[dbo].[Person]
 )
 END
 GO</pre>
-  <h3 class="mediumVMargin">The Data Object</h3>
-  <!-- ******************************* -->
-  <div class="columns">
-    <p class="book">
-      A Data Object contains public properties for each data value in a data
-      row. It is a strongly typed, object oriented representation of the data
-      row for use in code. A data row is sometimes referred to as a &quot;record&quot;. A
-      data value is sometimes referred to as a &quot;column&quot;.
-    </p>
-    <p class="book">
-      A Data Object usually has the same name as the base table that contains
-      the data columns it represents. It may contain methods for cloning,
-      sorting and displaying an object string identifier.
-    </p>
-    <ul class="smallVMargin">
-      <li>
-        Add a Class named &quot;Person&quot; to the Data folder.
-      </li>
-      <li>
-        If Visual Studio creates the namespace as DataTestDAL.Data, then remove
-        the &quot;.Data&quot; suffix.
-      </li>
-    </ul>
-  </div>
-<pre class="code">
+    <h3 class="headingMargin">The Data Object</h3>
+    <!-- ******************************* -->
+    <div class="columns">
+      <p class="book">
+        A Data Object contains public properties for each data value in a data
+        row. It is a strongly typed, object oriented representation of the data
+        row for use in code. A data row is sometimes referred to as a &quot;record&quot;. A
+        data value is sometimes referred to as a &quot;column&quot;.
+      </p>
+      <p class="book">
+        A Data Object usually has the same name as the base table that contains
+        the data columns it represents. It may contain methods for cloning,
+        sorting and displaying an object string identifier.
+      </p>
+      <ul class="listMargin">
+        <li>
+          Add a Class named &quot;Person&quot; to the Data folder.
+        </li>
+        <li>
+          If Visual Studio creates the namespace as DataTestDAL.Data, then remove
+          the &quot;.Data&quot; suffix.
+        </li>
+      </ul>
+    </div>
+  <pre class="code">
 <span class='keyWord'>using</span> System;
 
 <span class='keyWord'>namespace</span> DataTestDAL
@@ -142,30 +144,30 @@ GO</pre>
     <span class='xmlComment'>#endregion</span>
   }
 }</pre>
-  <h2 class="mediumVMargin">The Data Object Collection</h2>
-  <!-- ******************************* -->
-  <div class="columns">
-    <p class="book">
-      A Data Object Collection can contain multiple Data Object elements. It is
-      a strongly typed, object oriented representation of a set of related data
-      records.
-    </p>
-    <p class="book">
-      A Data Object Collection usually has the plural name of the base table
-      that it represents. It may contain methods for sorting, searching and
-      adding new data records.
-    </p>
-    <ul class="smallVMargin">
-      <li>
-        Add a Class named &quot;Persons&quot; to the Data folder.
-      </li>
-      <li>
-        If Visual Studio creates the namespace as DataTestDAL.Data, then remove
-        the &quot;.Data&quot; suffix.
-      </li>
-    </ul>
-  </div>
-  <pre class="code">
+    <h2 class="headingMargin">The Data Object Collection</h2>
+    <!-- ******************************* -->
+    <div class="columns">
+      <p class="book">
+        A Data Object Collection can contain multiple Data Object elements. It is
+        a strongly typed, object oriented representation of a set of related data
+        records.
+      </p>
+      <p class="book">
+        A Data Object Collection usually has the plural name of the base table
+        that it represents. It may contain methods for sorting, searching and
+        adding new data records.
+      </p>
+      <ul class="listMargin">
+        <li>
+          Add a Class named &quot;Persons&quot; to the Data folder.
+        </li>
+        <li>
+          If Visual Studio creates the namespace as DataTestDAL.Data, then remove
+          the &quot;.Data&quot; suffix.
+        </li>
+      </ul>
+    </div>
+    <pre class="code">
 <span class='keyWord'>using</span> System;
 <span class='keyWord'>using</span> System.Collections.Generic;
 
@@ -176,33 +178,33 @@ GO</pre>
   {
   }
 }</pre>
-  <h3 class="mediumVMargin">The Manager Class</h3>
-  <!-- ******************************* -->
-  <div class="columns">
-    <p class="book">
-      A Data Manager class contains methods for accessing table data. It is a
-      strongly typed, object oriented class containing standard data access
-      methods for a specific base table and related data columns.
-    </p>
-    <p class="book">
-      A Data Manager usually has the same name as the base table followed with
-      the text &quot;Manager&quot;.
-    </p>
-    <ul class="smallVMargin">
-      <li>
-        Add a Class named &quot;PersonManager&quot; to the Manager folder.
-      </li>
-      <li>
-        If Visual Studio creates the namespace as DataTestDAL.Manager, then
-        remove the &quot;.Manager&quot; suffix.
-      </li>
-      <li>
-        The PersonManager class inherits from the generic class
-        LJCDBClientLib.ObjectManager.
-      </li>
-    </ul>
-  </div>
-  <pre class="code">
+    <h3 class="headingMargin">The Manager Class</h3>
+    <!-- ******************************* -->
+    <div class="columns">
+      <p class="book">
+        A Data Manager class contains methods for accessing table data. It is a
+        strongly typed, object oriented class containing standard data access
+        methods for a specific base table and related data columns.
+      </p>
+      <p class="book">
+        A Data Manager usually has the same name as the base table followed with
+        the text &quot;Manager&quot;.
+      </p>
+      <ul class="listMargin">
+        <li>
+          Add a Class named &quot;PersonManager&quot; to the Manager folder.
+        </li>
+        <li>
+          If Visual Studio creates the namespace as DataTestDAL.Manager, then
+          remove the &quot;.Manager&quot; suffix.
+        </li>
+        <li>
+          The PersonManager class inherits from the generic class
+          LJCDBClientLib.ObjectManager.
+        </li>
+      </ul>
+    </div>
+    <pre class="code">
 <span class='keyWord'>using</span> System;
 <span class='keyWord'>using</span> System.Collections.Generic;
 <span class='keyWord'>using</span> LJCDBClientLib;
@@ -237,7 +239,7 @@ GO</pre>
     }
   }
 }</pre>
-  <br />
-  <a href="DALTest.html">The DAL Test Program</a>
+    <a href="DALTest.html">The DAL Test Program</a>
+  </div>
 </body>
 </html>
