--- a/HTML/HTMLDocs/DataAccess/DALTest.html
+++ b/HTML/HTMLDocs/DataAccess/DALTest.html
@@ -5,26 +5,28 @@
 <html>
 <head>
   <title>DAL Test</title>
+  <link rel="stylesheet" type="text/css" href="../CSS/CodeDoc.css" />
   <link rel="stylesheet" type="text/css" href="../CSS/HTMLBooks.css" />
   <link rel='stylesheet' type='text/css' href='../CSS/Syntax.css' />
 </head>
 <body>
-  <a href="DAL.html">The Data Access Layer</a>
-  <br />
-  <h2 class="mediumVMargin">The Test DAL Program</h2>
-  <!-- ******************************* -->
-  <div class="columnsAuto">
-    <p class="book">
-      For the following examples we will concentrate on the
-      LJCDBDataAccessLib.DbDataAccess class.
-    </p>
-    <ul class="smallVMargin">
-      <li>
-        Add a new Console Project named "DataTestDAL" to the DataTest solution.
-      </li>
-    </ul>
-  </div>
-  <pre class="code">
+  <div class="page">
+    <a href="DAL.html">The Data Access Layer</a>
+    <br />
+    <h2 class="headingMargin">The Test DAL Program</h2>
+    <!-- ******************************* -->
+    <div class="columnsAuto">
+      <p class="book">
+        For the following examples we will concentrate on the
+        LJCDBDataAccessLib.DbDataAccess class.
+      </p>
+      <ul class="listMargin">
+        <li>
+          Add a new Console Project named "DataTestDAL" to the DataTest solution.
+        </li>
+      </ul>
+    </div>
+    <pre class="code">
 <span class='keyWord'>using</span> System;
 <span class='keyWord'>using</span> System.Collections.Generic;
 <span class='keyWord'>using</span> LJCNetCommon;
@@ -66,44 +68,44 @@
     <span class='xmlComment'>#endregion</span>
   }
 }</pre>
-  <h3 class="mediumVMargin">The DbServiceRef Class</h3>
-  <!-- ******************************* -->
-  <div class="columns">
-    <p class="book">
-      The constructor for an ObjectManager derived class takes an
-      LJCDBClientLib.DbServiceRef parameter.
-    </p>
-    <p class="smallVMargin">
-      The DbServiceRef class contains three properties:
-    </p>
-    <ul class="smallVMargin">
-      <li>
-        DbDataAccess &hyphen; This is a reference to the Message Data Access object.
-      </li>
-      <li>
-        DbService &hyphen; This is a reference to the local Data Service object.
-      </li>
-      <li>
-        DbServiceClient &hyphen; This is a reference to the remote Data Service
-        Proxy class.
-      </li>
-    </ul>
-    <p class="book">
-      The Manager class checks these references in the previous order and uses
-      the first one that is not null.
-    </p>
-    <p class="book">
-      The program starts by create a reference to the DbServiceRef object. It
-      does this by calling the CreateServiceRef() method.
-    </p>
-    <p class="book">
-      The DbServiceRef.DbDataAccess property is initialized with the DataConfig
-      name. This name refers to a DataConfig entry in the DataConfigs.xml file.
-      This file must be available in the same folder as the calling program. The
-      program folder must also contain the LJCDataConfig.dll library.
-    </p>
-  </div>
-  <pre class="code">
+    <h3 class="headingMargin">The DbServiceRef Class</h3>
+    <!-- ******************************* -->
+    <div class="columns">
+      <p class="book">
+        The constructor for an ObjectManager derived class takes an
+        LJCDBClientLib.DbServiceRef parameter.
+      </p>
+      <p class="listMargin">
+        The DbServiceRef class contains three properties:
+      </p>
+      <ul class="listMargin">
+        <li>
+          DbDataAccess &hyphen; This is a reference to the Message Data Access object.
+        </li>
+        <li>
+          DbService &hyphen; This is a reference to the local Data Service object.
+        </li>
+        <li>
+          DbServiceClient &hyphen; This is a reference to the remote Data Service
+          Proxy class.
+        </li>
+      </ul>
+      <p class="book">
+        The Manager class checks these references in the previous order and uses
+        the first one that is not null.
+      </p>
+      <p class="book">
+        The program starts by create a reference to the DbServiceRef object. It
+        does this by calling the CreateServiceRef() method.
+      </p>
+      <p class="book">
+        The DbServiceRef.DbDataAccess property is initialized with the DataConfig
+        name. This name refers to a DataConfig entry in the DataConfigs.xml file.
+        This file must be available in the same folder as the calling program. The
+        program folder must also contain the LJCDataConfig.dll library.
+      </p>
+    </div>
+    <pre class="code">
 &lt;?xml version="1.0" ?&gt;
 &lt;DataConfigs xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
   &lt;DataConfig&gt;
@@ -113,20 +115,20 @@
   &lt;ConnectionType&gt;SQLServer&lt;/ConnectionType&gt;
   &lt;/DataConfig&gt;
 &lt;/DataConfigs&gt;</pre>
-  <!-- ******************************* -->
-  <div class="columns">
-    <p class="book">
-      The program folder must also contain the ConnectionTemplate.xml file.
-    </p>
-    <p class="book">
-      The ConnectionType value in the DataConfig.xml file refers to the Name
-      value in the ConnectionTemplate.xml file. The ConnectionTemplate is used
-      to create the Connection String for the program data access. It changes
-      the replaceable parameters in braces with the associated DataConfig
-      values.
-    </p>
-  </div>
-  <pre class="code">
+    <!-- ******************************* -->
+    <div class="columns">
+      <p class="book">
+        The program folder must also contain the ConnectionTemplate.xml file.
+      </p>
+      <p class="book">
+        The ConnectionType value in the DataConfig.xml file refers to the Name
+        value in the ConnectionTemplate.xml file. The ConnectionTemplate is used
+        to create the Connection String for the program data access. It changes
+        the replaceable parameters in braces with the associated DataConfig
+        values.
+      </p>
+    </div>
+    <pre class="code">
 &lt;?xml version="1.0" ?&gt;
 &lt;ConnectionTemplates xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
   &lt;ConnectionTemplate&gt;
@@ -134,20 +136,20 @@
   &lt;Template&gt;Data Source={DbServer}; Initial Catalog={Database}; Integrated Security=True&lt;/Template&gt;
   &lt;/ConnectionTemplate&gt;
 &lt;/ConnectionTemplates&gt;</pre>
-  <h3 class="mediumVMargin">The ObjectManager Derived Class</h3>
-  <!-- ******************************* -->
-  <div class="columnsAuto">
-    <ul class="smallVMargin">
-      <li>
-        Add a function to the Program class to create the PersonManager object.
-      </li>
-      <li>
-        Add the CreatePersonManager() function to the Program class, after the
-        CreateServiceRef() function.
-      </li>
-    </ul>
-  </div>
-  <pre>
+    <h3 class="headingMargin">The ObjectManager Derived Class</h3>
+    <!-- ******************************* -->
+    <div class="columnsAuto">
+      <ul class="listMargin">
+        <li>
+          Add a function to the Program class to create the PersonManager object.
+        </li>
+        <li>
+          Add the CreatePersonManager() function to the Program class, after the
+          CreateServiceRef() function.
+        </li>
+      </ul>
+    </div>
+    <pre>
 <span class='comment'>// Creates the PersonManager object.</span>
 <span class='modifier'>private</span> <span class='modifier'>static</span> PersonManager CreatePersonManager(DbServiceRef dbServiceRef
   , <span class='commonType'>string</span> dataConfigName)
@@ -155,15 +157,15 @@
   PersonManager retValue = <span class='keyWord'>new</span> <span class='userType'>PersonManager</span>(dbServiceRef, dataConfigName);
   <span class='keyWord'>return</span> retValue;
 }</pre>
-  <!-- ******************************* -->
-  <div class="columnsAuto">
-    <p class="book">
-      In the Program class, Main() function, add the code to create the
-      PersonManager object immediately after the code that creates the
-      DbServiceRef object.
-    </p>
-  </div>
-  <pre class="code">
+    <!-- ******************************* -->
+    <div class="columnsAuto">
+      <p class="book">
+        In the Program class, Main() function, add the code to create the
+        PersonManager object immediately after the code that creates the
+        DbServiceRef object.
+      </p>
+    </div>
+    <pre class="code">
 <span class='keyWord'>if</span> (success)
 {
   personManager = CreatePersonManager(dbServiceRef, dataConfigName);
@@ -172,22 +174,22 @@
     success = <span class='keyWord'>false</span>;
   }
 }</pre>
-  <!-- ******************************* -->
-  <div class="columns">
-    <p class="book">
-      The Manager class inherits data access methods from the ObjectManager base
-      class. The most commonly used of these methods are: Add(), Delete(),
-      Load(), Retrieve() and Update(). We will create test methods for each of
-      these common manager methods.
-    </p>
-    <ul class="smallVMargin">
-      <li>
-        Add the WriteRowString() function to the Program class, ";Helper
-        Functions"; region.
-      </li>
-    </ul>
-  </div>
-  <pre class="code">
+    <!-- ******************************* -->
+    <div class="columns">
+      <p class="book">
+        The Manager class inherits data access methods from the ObjectManager base
+        class. The most commonly used of these methods are: Add(), Delete(),
+        Load(), Retrieve() and Update(). We will create test methods for each of
+        these common manager methods.
+      </p>
+      <ul class="listMargin">
+        <li>
+          Add the WriteRowString() function to the Program class, ";Helper
+          Functions"; region.
+        </li>
+      </ul>
+    </div>
+    <pre class="code">
 <span class='comment'>// Write the record string.</span>
 
 <span class='modifier'>private</span> <span class='modifier'>static</span> <span class='commonType'>string</span> WriteRowString(Person person)
@@ -201,6 +203,7 @@
   }
   <span class='keyWord'>return</span> retValue;
 }</pre>
-  <a href="DALTestLoad.html">The DAL Test Load() Method</a>
+    <a href="DALTestLoad.html">The DAL Test Load() Method</a>
+  </div>
 </body>
 </html>
