--- a/HTML/HTMLDocs/DataAccess/DALTestDelete.html
+++ b/HTML/HTMLDocs/DataAccess/DALTestDelete.html
@@ -5,27 +5,29 @@
 <html>
 <head>
   <title>DAL Test Delete</title>
+  <link rel="stylesheet" type="text/css" href="../CSS/CodeDoc.css" />
   <link rel="stylesheet" type="text/css" href="../CSS/HTMLBooks.css" />
   <link rel='stylesheet' type='text/css' href='../CSS/Syntax.css' />
 </head>
 <body>
-  <a href="DALTestUpdate.html">The DAL Test Update() Method</a>
-  <br />
-  <h4 class="mediumVMargin">The Delete() Method</h4>
-  <!-- ******************************* -->
-  <div class="columnsAuto">
-    <p class="book">
-      The inherited PersonManager.Delete() method deletes the records that
-      matches the key specified by the keyRecord parameter.
-    </p>
-    <ul class="smallVMargin">
-      <li>
-        Add the TestDelete() function to the Program class, "TestFunctions"
-        region.
-      </li>
-    </ul>
-  </div>
-  <pre class="code">
+  <div class="page">
+    <a href="DALTestUpdate.html">The DAL Test Update() Method</a>
+    <br />
+    <h4 class="headingMargin">The Delete() Method</h4>
+    <!-- ******************************* -->
+    <div class="columnsAuto">
+      <p class="book">
+        The inherited PersonManager.Delete() method deletes the records that
+        matches the key specified by the keyRecord parameter.
+      </p>
+      <ul class="listMargin">
+        <li>
+          Add the TestDelete() function to the Program class, "TestFunctions"
+          region.
+        </li>
+      </ul>
+    </div>
+    <pre class="code">
 <span class='comment'>// Test the Delete function.</span>
 <span class='modifier'>private</span> <span class='modifier'>static</span> <span class='commonType'>void</span> TestDelete(string name, PersonManager personManager)
 {
@@ -42,15 +44,28 @@
     personManager.Delete(keyRecord);
   }
 }</pre>
-  <!-- ******************************* -->
-  <div class="columnsAuto">
-    <ul class="smallVMargin">
-      <li>
-        Add the TestDelete(personManager) function call to the Program class,
-        "Test function calls." section.
-      </li>
-    </ul>
+    <!-- ******************************* -->
+    <div class="columnsAuto">
+      <ul class="listMargin">
+        <li>
+          Add the TestDelete(personManager) function call to the Program class,
+          "Test function calls." section.
+        </li>
+      </ul>
+    </div>
+    <pre class="code">
+<span class='keyWord'>if</span> (success)
+{
+    <span class='comment'>// Test function calls.</span>
+  TestLoad(personManager);
+  TestAdd(personManager);
+  TestRetrieve(personManager);
+  TestUpdate(personManager);
+  TestDelete(personManager);
+
+  Console.WriteLine("Press any key to <span class='keyWord'>continue</span> . . .");
+  Console.ReadKey();
+}</pre>
   </div>
-  <br />
 </body>
 </html>
