--- a/HTML/HTMLDocs/DataAccess/DALTestLoad.html
+++ b/HTML/HTMLDocs/DataAccess/DALTestLoad.html
@@ -5,31 +5,33 @@
 <html>
 <head>
   <title>DALTest Load</title>
+  <link rel="stylesheet" type="text/css" href="../CSS/CodeDoc.css" />
   <link rel="stylesheet" type="text/css" href="../CSS/HTMLBooks.css" />
   <link rel='stylesheet' type='text/css' href='../CSS/Syntax.css' />
 </head>
 <body>
-  <a href="DALTest.html">The DAL Test Program</a>
-  <br/>
-  <h3 class="mediumVMargin">The Load() Method</h3>
-  <!-- ******************************* -->
-  <div class="columns">
-    <p class="book">
-      The inherited PersonManager.Load() method retrieves multiple records
-      from the configured table. If there are no specified parameters, it
-      retrieves all available records.
-    </p>
-    <ul class="smallVMargin">
-      <li>
-        Add the &quot;Test Functions&quot; region to the Program class after the Main()
-        function.
-      </li>
-      <li>
-        Add the TestLoad() function to the Program class.
-      </li>
-    </ul>
-  </div>
-  <pre class="code>">
+  <div class="page">
+    <a href="DALTest.html">The DAL Test Program</a>
+    <br/>
+    <h3 class="headingMargin">The Load() Method</h3>
+    <!-- ******************************* -->
+    <div class="columns">
+      <p class="book">
+        The inherited PersonManager.Load() method retrieves multiple records
+        from the configured table. If there are no specified parameters, it
+        retrieves all available records.
+      </p>
+      <ul class="listMargin">
+        <li>
+          Add the &quot;Test Functions&quot; region to the Program class after the Main()
+          function.
+        </li>
+        <li>
+          Add the TestLoad() function to the Program class.
+        </li>
+      </ul>
+    </div>
+    <pre class="code>">
 <span class='xmlComment'>#region Test Methods</span>
 
 <span class='comment'>// Test the Load function.</span>
@@ -48,17 +50,16 @@
   }
 }
 <span class='xmlComment'>#endregion</span></pre>
-  <!-- ******************************* -->
-  <div class="columnsAuto">
-    <ul class="smallVMargin">
-      <li>
-        Add the test function call section to the Program class, Main()
-        function. This code must be added after the call to
-        CreatePersonManager().
-      </li>
-    </ul>
-  </div>
-  <pre class="code>">
+    <div class="columnsAuto">
+      <ul class="listMargin">
+        <li>
+          Add the test function call section to the Program class, Main()
+          function. This code must be added after the call to
+          CreatePersonManager().
+        </li>
+      </ul>
+    </div>
+    <pre class="code">
 <span class='keyWord'>if</span> (success)
 {
   <span class='comment'>// Test function calls.</span>
@@ -67,6 +68,7 @@
   Console.WriteLine("Press any key to <span class='keyWord'>continue</span> . . .");
   Console.ReadKey();
 }</pre>
-  <a href="DALTestAdd.html">The DAL Test Add() Method"</a>
+    <a href="DALTestAdd.html">The DAL Test Add() Method"</a>
+  </div>
 </body>
 </html>
