--- a/HTML/HTMLDocs/DataAccess/DALTestRetrieve.html
+++ b/HTML/HTMLDocs/DataAccess/DALTestRetrieve.html
@@ -5,27 +5,29 @@
 <html>
 <head>
   <title>DALTest Retrieve</title>
+  <link rel="stylesheet" type="text/css" href="../CSS/CodeDoc.css" />
   <link rel="stylesheet" type="text/css" href="../CSS/HTMLBooks.css" />
   <link rel='stylesheet' type='text/css' href='../CSS/Syntax.css' />
 </head>
 <body>
-  <a href="DALTestAdd.html">The DAL Test Add() Method</a>
-  <br />
-  <h4 class="mediumVMargin">The Retrieve() Method</h4>
-  <!-- ******************************* -->
-  <div class="columnsAuto">
-    <p class="book">
-      The inherited PersonManager.Retrieve() method retrieves a single record
-      that matches the key specified by the keyRecord parameter.
-    </p>
-    <ul class="smallVMargin">
-      <li>
-        Add the TestRetrieve() function to the Program class, test function
-        &quot;TestFunctions&quot; region.
-      </li>
-    </ul>
-  </div>
-  <pre class="code">
+  <div class="page">
+    <a href="DALTestAdd.html">The DAL Test Add() Method</a>
+    <br />
+    <h4 class="headingMargin">The Retrieve() Method</h4>
+    <!-- ******************************* -->
+    <div class="columnsAuto">
+      <p class="book">
+        The inherited PersonManager.Retrieve() method retrieves a single record
+        that matches the key specified by the keyRecord parameter.
+      </p>
+      <ul class="listMargin">
+        <li>
+          Add the TestRetrieve() function to the Program class, test function
+          &quot;TestFunctions&quot; region.
+        </li>
+      </ul>
+    </div>
+    <pre class="code">
 <span class='comment'>// Test the Retrieve function.</span>
 <span class='modifier'>private</span> <span class='modifier'>static</span> <span class='commonType'>void</span> TestRetrieve(PersonManager personManager)
 {
@@ -43,16 +45,17 @@
     WriteRowString(lookupRecord);
   }
 }</pre>
-  <!-- ******************************* -->
-  <div class="columnsAuto">
-    <ul class="smallVMargin">
-      <li>
-        Add the TestRetrieve(personManager) function call to the Program class,
-        &quot;Test function calls.&quot; section.
-      </li>
-    </ul>
-  </div>
-  <br />
-  <a href="DALTestUpdate.html"">The DAL Test Update() Method</a>
+    <!-- ******************************* -->
+    <div class="columnsAuto">
+      <ul class="listMargin">
+        <li>
+          Add the TestRetrieve(personManager) function call to the Program class,
+          &quot;Test function calls.&quot; section.
+        </li>
+      </ul>
+    </div>
+    <br />
+    <a href="DALTestUpdate.html"">The DAL Test Update() Method</a>
+ </div>
 </body>
 </html>
