--- a/HTML/HTMLDocs/DataAccess/DALTestUpdate.html
+++ b/HTML/HTMLDocs/DataAccess/DALTestUpdate.html
@@ -5,27 +5,29 @@
 <html>
 <head>
   <title>DALTest Update</title>
+  <link rel="stylesheet" type="text/css" href="../CSS/CodeDoc.css" />
   <link rel="stylesheet" type="text/css" href="../CSS/HTMLBooks.css" />
   <link rel='stylesheet' type='text/css' href='../CSS/Syntax.css' />
 </head>
 <body>
-  <a href="DALTestRetrieve.html">The DAL Test Retrieve() Method</a>
-  <br />
-  <h4 class="mediumVMargin">The Update() Method</h4>
-  <!-- ******************************* -->
-  <div class="columnsAuto">
-    <p class="book">
-      The inherited PersonManager.Update() method updates the specified
-      dataRecord that matches the key specified by the keyRecord parameter.
-    </p>
-    <ul class="smallVMargin">
-      <li>
-        Add the TestUpdate() function to the Program class, &quot;TestFunctions&quot;
-        region.
-      </li>
-    </ul>
-  </div>
-  <pre class="code">
+  <div class="page">
+    <a href="DALTestRetrieve.html">The DAL Test Retrieve() Method</a>
+    <br />
+    <h4 class="headingMargin">The Update() Method</h4>
+    <!-- ******************************* -->
+    <div class="columnsAuto">
+      <p class="book">
+        The inherited PersonManager.Update() method updates the specified
+        dataRecord that matches the key specified by the keyRecord parameter.
+      </p>
+      <ul class="listMargin">
+        <li>
+          Add the TestUpdate() function to the Program class, &quot;TestFunctions&quot;
+          region.
+        </li>
+      </ul>
+    </div>
+    <pre class="code">
 <span class='comment'>// Test the Update function.</span>
 <span class='modifier'>private</span> <span class='modifier'>static</span> <span class='commonType'>void</span> TestUpdate(PersonManager personManager)
 {
@@ -58,16 +60,17 @@
   personManager.SetExcludeKeys();
   personManager.Update(dataRecord, keyRecord, columnNames);
 }</pre>
-  <!-- ******************************* -->
-  <div class="columnsAuto">
-    <ul class="smallVMargin">
-      <li>
-        Add the TestUpdate(personManager) function call to the Program class,
-        &quot;Test function calls.&quot; section.
-      </li>
-    </ul>
+    <!-- ******************************* -->
+    <div class="columnsAuto">
+      <ul class="listMargin">
+        <li>
+          Add the TestUpdate(personManager) function call to the Program class,
+          &quot;Test function calls.&quot; section.
+        </li>
+      </ul>
+    </div>
+    <a href="DALTestDelete.html">The DAL Test Delete() Method</a>
+    <br />
   </div>
-  <a href="DALTestDelete.html">The DAL Test Delete() Method</a>
-  <br />
 </body>
 </html>
