--- a/HTML/HTMLDocs/DataAccess/DAL.html
+++ b/HTML/HTMLDocs/DataAccess/DAL.html
@@ -45,6 +45,9 @@
           Add a Folder named &quot;Manager&quot; to the DataTestDAL project.
         </li>
       </ul>
+    </div>
+    <br />
+    <div class="columnsAuto">
       <p class="book">
         The following examples use the table created with this script.
       </p>
