--- a/HTML/Tutorials.html
+++ b/HTML/Tutorials.html
@@ -107,6 +107,9 @@
       <!-- ****************************** -->
       <h4 id="Testing">Testing Tutorials</h4>
       <p>
+        <a href="HTMLDocs/DataAccess/DataAccess.html">Data Access</a>
+      </p>
+      <p>
         <a href="HTMLDocs/DataAccess/DAL.html">Data Access Layer</a>
       </p>
       <!-- ****************************** -->
