--- a/HTML/Tutorials.html
+++ b/HTML/Tutorials.html
@@ -112,6 +112,12 @@
       <p>
         <a href="HTMLDocs/DataAccess/DAL.html">Data Access Layer</a>
       </p>
+      <p>
+        <a href="HTMLDocs/DataAccess/DataGridView.html">Show Data in DataGridView</a>
+      </p>
+      <p>
+        <a href="HTMLDocs/DataAccess/LJCDataGrid.html">Show Data in LJCDataGrid</a>
+      </p>
       <!-- ****************************** -->
       <h4 id="ProvinceManager">Utilities</h4>
       <p>
