--- a/HTML/HTMLDocs/DataAccess/DataAccess.html
+++ b/HTML/HTMLDocs/DataAccess/DataAccess.html
@@ -11,22 +11,25 @@
 </head>
 <body>
   <div class="page">
+    <br />
     <!-- ****************************** -->
     <div class="columnsAuto">
       <p class="book">
         This is an abbreviated tutorial showing how to use the LJCDataAccess
-        library and DataAccess class to retrieve data from a database and display
-        it in a DataGridView control.
+        library and DataAccess class to retrieve data from a database.
       </p>
-      </div>
-      <h2 class="headingMargin">The Data Access Library</h2>
+    </div>
+    <h2 class="headingMargin">The Data Access Library</h2>
     <!-- ****************************** -->
-    <div class="columns">
+    <div class="columnsAuto">
       <p class="book">
         The Data Access library (LJCDataAccess.dll) contains classes that provide
         common functionality for program access to database tables.
       </p>
-      <h3 class="headingMargin">DataAccess Class</h3>
+    </div>
+    <h3 class="headingMargin">DataAccess Class</h3>
+    <!-- ****************************** -->
+    <div class="columns">
       <p class="book">
         This class implements an ADO.NET SQL Data Access Control layer.
       </p>
@@ -128,7 +131,7 @@ GO</pre>
     <span class='xmlComment'>#region</span> Public Methods
 
     <span class='xmlComment'>/// &lt;summary&gt;</span>
-    <span class='xmlComment'>/// </span> <span class="comment">Get a DataColumn collection from the specified ColumnName values.</span>
+    <span class='xmlComment'>/// </span><span class="comment">Get a DataColumn collection from the specified ColumnName values.</span>
     <span class='xmlComment'>/// &lt;/summary&gt;</span>
     <span class='xmlComment'>/// &lt;param name="</span>columnNames<span class="xmlComment">"&gt;</span><span class="comment">The Column Name array.</span><span class="xmlComment">&lt;/param&gt;</span>
     <span class='xmlComment'>/// &lt;returns&gt;</span><span class="comment">The DataColumn collection.</span><span class="xmlComment">&lt;/returns&gt;</span>
@@ -201,141 +204,5 @@ GO</pre>
     <span class='xmlComment'>#endregion</span>
   }
 }</pre>
-    <h3 class="headingMargin">Adding Data to a DataGridView</h3>
-    <!-- ****************************** -->
-    <div class="columns">
-      <ul class="listMargin">
-        <li>
-          Add a new WinForms Project named "PersonApp" to the DataAccessTest solution.
-        </li>
-        <li>
-          Add a reference to the PersonDAL project for the PersonApp project.
-        </li>
-        <li>
-          Add a Form named "PersonList" to the PersonApp project.
-        </li>
-      </ul>
-    </div>
-    <pre class="code">
-<span class='keyWord'>using</span> System;
-<span class='keyWord'>using</span> System.Data;
-<span class='keyWord'>using</span> System.Linq;
-<span class='keyWord'>using</span> System.Windows.Forms;
-<span class='keyWord'>using</span> PersonDAL;
-
-<span class='keyWord'>namespace</span> PersonApp
-{
-  <span class='modifier'>public</span> <span class='keyWord'>partial</span> <span class='keyWord'>class</span> <span class='userType'>PersonList</span> : Form
-  {
-    <span class='xmlComment'>#region</span> Constructors
-
-    <span class='xmlComment'>/// &lt;summary&gt;</span><span class="comment">Initializes an object instance.</span><span class="cmlComment">&lt;/summary&lt;</span>
-    <span class='modifier'>public</span> <span class='userType'>PersonList</span>()
-    {
-      InitializeComponent();
-    }
-    <span class='xmlComment'>#endregion</span>
-
-    <span class='xmlComment'>#region</span> Form Event Handlers
-
-    <span class='comment'>// Configures the form and loads the initial control data.</span>
-    <span class='modifier'>private</span> <span class='commonType'>void</span> PersonList_Load(<span class='keyWord'>object</span> sender, EventArgs e)
-    {
-      InitializeControls();
-      DataRetrieve();
-    }
-    <span class='xmlComment'>#endregion</span>
-
-    <span class='xmlComment'>#region</span> Data Methods
-
-    <span class='comment'>// Retrieves the list rows into a DataGridView Grid.</span>
-    <span class='modifier'>private</span> <span class='commonType'>void</span> DataRetrieve()
-    {
-      <span class='comment'>// Get the data.</span>
-      <span class='userType'>DataTable</span> dataTable = mPersonManager.GetDataTable();
-
-      <span class='comment'>// Add the grid rows.</span>
-      <span class='keyWord'>foreach</span> (<span class='userType'>DataRow</span> dataRow in dataTable.Rows)
-      {
-        <span class='comment'>// Add a new Grid Row.</span>
-        <span class='commonType'>int</span> index = PersonGrid.Rows.Add();
-        <span class='userType'>DataGridViewRow</span> gridRow = PersonGrid.Rows[index];
-        gridRow.Height = 18;
-
-        <span class='comment'>// Add the Data Values to the Grid Row.</span>
-        <span class='keyWord'>foreach</span> (<span class='userType'>DataColumn</span> dataColumn in dataTable.Columns)
-        {
-          <span class='commonType'>string</span> columnName = dataColumn.ColumnName;
-
-          <span class='comment'>// Get the Data Value and create the Cell value.</span>
-          <span class='commonType'>object</span> cellValue = <span class='text'>""</span>;
-          <span class='commonType'>object</span> dataValue = dataRow[columnName];
-          <span class='keyWord'>if</span> (dataValue != null)
-          {
-            cellValue = dataValue.ToString();
-          }
-
-          <span class='comment'>// The DataColumn name must be the same as the Grid Column name.</span>
-          <span class='keyWord'>if</span> (mPersonDisplayNames.Contains(columnName))
-          {
-            <span class='comment'>// Set the Cell value.</span>
-            <span class='userType'>DataGridViewCell</span> cell = gridRow.Cells[columnName];
-            cell.Value = cellValue.ToString();
-          }
-        }
-      }
-    }
-    <span class='xmlComment'>#endregion</span>
-
-    <span class='xmlComment'>#region</span> Setup Methods
-
-    <span class='comment'>// Configures the controls and loads the selection control data.</span>
-    <span class='modifier'>private</span> <span class='commonType'>void</span> InitializeControls()
-    {
-      <span class='comment'>// Initialize Class Data.</span>
-      mPersonManager = <span class='keyWord'>new</span> <span class='userType'>PersonManager</span>();
-
-      <span class='comment'>// Set initial control values.</span>
-      SetupGridPerson();
-    }
-
-    <span class='comment'>// Setup the grid display columns.</span>
-    <span class='modifier'>private</span> void SetupGridPerson()
-    {
-      <span class='userType'>DataColumnCollection</span> columns;
-
-      <span class='comment'>// Specify the Grid Display Column names.</span>
-      mPersonDisplayNames = new <span class='commonType'>string</span>[]
-      {
-        <span class='text'>"Name"</span>,
-        <span class='text'>"PrincipleFlag"</span>
-      };
-      columns = mPersonManager.GetColumns(mPersonDisplayNames);
-
-      PersonGrid.RowHeadersVisible = false;
-      <span class='keyWord'>foreach</span> (DataColumn dataColumn in columns)
-      {
-        <span class='comment'>// Set Grid Column name the same as the DataColumn name.</span>
-        <span class='commonType'>string</span> name = dataColumn.ColumnName;
-        <span class='commonType'>int</span> index = PersonGrid.Columns.Add(name, name);
-        <span class='userType'>DataGridViewColumn</span> gridColumn = PersonGrid.Columns[index];
-        gridColumn.Width = 150;
-        <span class='keyWord'>if</span> (gridColumn.Name.Equals("PrincipleFlag"
-          , <span class='userType'>StringComparison</span>.CurrentCultureIgnoreCase))
-        {
-          gridColumn.AutoSizeMode = <span class='userType'>DataGridViewAutoSizeColumnMode</span>.Fill;
-        }
-      }
-    }
-    <span class='xmlComment'>#endregion</span>
-
-    <span class='xmlComment'>#region</span> Class Data
-
-    <span class='modifier'>private</span> <span class='userType'>PersonManager</span> mPersonManager;
-    <span class='modifier'>private</span> <span class='commonType'>string</span>[] mPersonDisplayNames;
-    #endregion
-  }
-}</pre>
-  </div>
 </body>
 </html>
